InProgress #24324 - [Feature] Code cleanup